Filtering and stuff init

--- a/source/php/AcfFields/json/liked-posts-settings.json
+++ b/source/php/AcfFields/json/liked-posts-settings.json
@@ -28,10 +28,10 @@
             "save_other_choice": 0
         },
         {
-            "key": "field_63eb934a4165a",
-            "label": "Like page",
-            "name": "like_page",
-            "type": "post_object",
+            "key": "field_63ee48da2d607",
+            "label": "Liked post types to show",
+            "name": "liked_post_types_to_show",
+            "type": "checkbox",
             "instructions": "",
             "required": 0,
             "conditional_logic": 0,
@@ -40,19 +40,21 @@
                 "class": "",
                 "id": ""
             },
-            "post_type": [
-                "page"
-            ],
-            "taxonomy": "",
-            "return_format": "object",
-            "multiple": 0,
-            "save_custom": 0,
-            "save_post_status": "publish",
-            "acfe_bidirectional": {
-                "acfe_bidirectional_enabled": "0"
+            "choices": {
+                "showAll": "Show all",
+                "posts": "Posts",
+                "event": "Event",
+                "local-events": "Local-events",
+                "test": "Test"
             },
-            "allow_null": 0,
-            "ui": 1
+            "default_value": [
+                "showAll"
+            ],
+            "return_format": "value",
+            "allow_custom": 0,
+            "layout": "vertical",
+            "toggle": 0,
+            "save_custom": 0
         }
     ],
     "location": [
@@ -60,7 +62,7 @@
             {
                 "param": "post_type",
                 "operator": "==",
-                "value": "mod-liked-posts"
+                "value": "post"
             }
         ],
         [
@@ -68,13 +70,6 @@
                 "param": "block",
                 "operator": "==",
                 "value": "all"
-            }
-        ],
-        [
-            {
-                "param": "block",
-                "operator": "==",
-                "value": "acf\/liked-posts"
             }
         ]
     ],
