--- a/source/php/AcfFields/json/liked-posts-settings.json
+++ b/source/php/AcfFields/json/liked-posts-settings.json
@@ -41,8 +41,7 @@
                 "id": ""
             },
             "choices": {
-                "posts": "Posts",
-                "test": "Test"
+                "post": "Post"
             },
             "default_value": [],
             "return_format": "value",
@@ -50,6 +49,33 @@
             "layout": "vertical",
             "toggle": 0,
             "save_custom": 0
+        },
+        {
+            "key": "field_643685be6d8ea",
+            "label": "Columns",
+            "name": "liked_posts_columns",
+            "type": "select",
+            "instructions": "",
+            "required": 0,
+            "conditional_logic": 0,
+            "wrapper": {
+                "width": "",
+                "class": "",
+                "id": ""
+            },
+            "choices": {
+                "grid-md-12": "1",
+                "grid-md-6": "2",
+                "grid-md-4": "3",
+                "grid-md-3": "4"
+            },
+            "default_value": "grid-md-12",
+            "return_format": "value",
+            "multiple": 0,
+            "allow_null": 0,
+            "ui": 0,
+            "ajax": 0,
+            "placeholder": ""
         }
     ],
     "location": [
