--- a/source/php/AcfFields/json/liked-posts-settings.json
+++ b/source/php/AcfFields/json/liked-posts-settings.json
@@ -40,7 +40,8 @@
                 "id": ""
             },
             "choices": {
-                "post": "Post"
+                "post": "Post",
+                "place": "Place"
             },
             "default_value": [],
             "return_format": "value",
@@ -56,15 +57,7 @@
             "type": "select",
             "instructions": "",
             "required": 0,
-            "conditional_logic": [
-                [
-                    {
-                        "field": "field_63e9fb4a67244",
-                        "operator": "!=",
-                        "value": "card"
-                    }
-                ]
-            ],
+            "conditional_logic": 0,
             "wrapper": {
                 "width": "",
                 "class": "",
