--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "postcss-loader": "^6.2.1",
         "sass": "^1.49.7",
         "sass-loader": "^12.4.0",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.3",
         "webpack": "^5.68.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
