--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,30 @@
             "ModularityLikePosts\\": "source/php/"
         }
     },
-    "minimum-stability": "stable",
-    "require": {},
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "extra": {
+        "installer-paths": {
+            "vendor/{$vendor}/{$name}": [
+                "type:wordpress-muplugin",
+                "type:wordpress-theme",
+                "type:wordpress-plugin",
+                "type:acf-plugin"
+            ]
+        }
+    },
+    "require": {
+        "helsingborg-stad/municipio": "^6.0.0"
+    },
     "require-dev": {
         "brain/monkey": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.31.0",
         "phpunit/phpunit": "^9.5"
     },
-    "version": "3.0.1"
+    "version": "3.0.1",
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
+    }
 }
