chore: update municipio as dependency

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Niclas Norin",
-            "email": "niclas.norin@frontwalker.se"
+            "email": "niclas.norin@helsingborg.se"
         }
     ],
     "autoload": {
