--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
             "ModularityLikePosts\\": "source/php/"
         }
     },
-    "minimum-stability": "stable",
-    "require": {},
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require": {
+        "helsingborg-stad/municipio": "^6.0.0"
+    },
     "require-dev": {
         "brain/monkey": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.31.0",
