fix: no wp-content

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,16 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "extra": {
+        "installer-paths": {
+            "vendor/{$vendor}/{$name}": [
+                "type:wordpress-muplugin",
+                "type:wordpress-theme",
+                "type:wordpress-plugin",
+                "type:acf-plugin"
+            ]
+        }
+    },
     "require": {
         "helsingborg-stad/municipio": "^6.0.0"
     },
