--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     },
     "require": {
         "helsingborg-stad/municipio": "^6.0.0",
-        "helsingborg-stad/wpservice": "^2.0"
+        "helsingborg-stad/wpservice": "^2.0",
+        "helsingborg-stad/acfservice": "^1.3"
     },
     "require-dev": {
         "brain/monkey": "^2.6",
