--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "require": {
         "helsingborg-stad/municipio": "^6.0.0",
         "helsingborg-stad/wpservice": "^2.0",
-        "helsingborg-stad/acfservice": "^1.3"
+        "helsingborg-stad/acfservice": "^1.3",
+        "helsingborg-stad/wputilservice": "^0.2.48"
     },
     "require-dev": {
         "brain/monkey": "^2.6",
