--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,6 @@
         }
     },
     "require": {
-        "helsingborg-stad/municipio": "^6.0.0",
         "helsingborg-stad/wpservice": "^2.0",
         "helsingborg-stad/acfservice": "^1.3",
         "helsingborg-stad/wputilservice": "^0.2.48"
@@ -41,6 +40,9 @@
         "brain/monkey": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.31.0",
         "phpunit/phpunit": "^9.5"
+    },
+    "suggest": {
+        "helsingborg-stad/municipio": "^6.0.0"
     },
     "config": {
         "allow-plugins": {
